--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "next": "14.0.4",
     "react": "^18",
