--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-spinners": "^0.13.8",
     "validator": "^13.11.0"
   },
   "devDependencies": {
