--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
+    "redux": "^5.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-redux": "^7.1.33",
     "@types/validator": "^13.11.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
