--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "validator": "^13.11.0"
   },
   "devDependencies": {
@@ -27,11 +28,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.33",
+    "@types/redux-logger": "^3.0.13",
     "@types/validator": "^13.11.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "redux-cli-logger": "^2.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
