--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
