--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "next": "14.0.4",
@@ -25,6 +26,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "tailwind-merge": "^2.4.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
